# rust-service-test

./: .gitignore  Cargo.toml  License.txt  README.md
name_kanji/: .gitignore  Cargo.toml
name_kanji/src/: kanji_manager.rs  lib.rs  lucky_manager.rs  name_kanji_manager.rs
name_kanji/tests/: lib.rs
name_kanji_test/: Cargo.toml
name_kanji_test/src/: main.rs
pages/: gulpfile.js  index.html  package.json
pages/src/: app.js  count_result.js  name_input.js  name_list_result.js  name_result.js  name_result_image.js
src/: main.rs
