[package]
name = "rust-service-test"
version = "0.1.0"
authors = ["Motohiko Nagano <motohiko.nagano@gmail.com>"]

[dependencies.name_kanji]
path = "name_kanji"

[dependencies.iron]
version = "*"

[dependencies]

router = "*"
logger = "*"
rustc-serialize = "0.3"

[dependencies.urlencoded]
version = "*"